5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2171/executions/1749_1534.log
== TEST (2019-05-15 19:48:23) 
-- CODE:
a = float(input("umnumero real de x :"))
b = int(input("quantidade de termos :"))

t = -1 < x +1 
while(x + x**3/3 + x**5/5 + x**7/7 + x**9/9):
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:49:44) 
-- CODE:
a = float(input("umnumero real de x :"))
b = int(input("quantidade de termos :"))

t =(x + x**3/3 + x**5/5 + x**7/7)
while()
	
-- ERROR:
File "XXXX", line 5
    while()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
